# cliptools

./: CMakeLists.txt  README.md
src/: pbcopy.cpp  pbpaste.cpp
